
  * Added Thailand translation. Thanks to mr_hangman
  * Added Norwegian translation. Thanks to jente_14
  * Added icelandic translation. Thanks to Hreinsi
  * Added text search in album browser
  * Added support for libre.fm
  * Added Enqueue as Next option so the selection is added as the next track to be played.
  * Implemented crossfading between tracks
  * Read composer, comments from ape and m4a files added
  * Added Lyric support to Ape files
  * Added French translation thanks to Frombenny <frombenny@gmail.com>
  * Now playlist are created for found playlist doing a library scan
  * Added option to show full screen and to hide status bar
  * Implemented live search. Now Enter sends current filtered results to playlist
  * Added a composer listbox to the library tab
  * You can enable to delete the recordings not bigger than a certain amount
    of time in preferences
  * Added a button to record from streams. Need to enable it from Preferences
  * If no lyric is found after showing the error that was not found restore
    the previous lyric text
  * Added option to align text in lyrics
  * Fixed mpris Pause/Play interface
  * Added lyricsplugin.com as lyrics search engine
  * Added a playcount listbox to filter in library tab
  * Added a rating listbox to filter in library tab
  * Added a year listbox to filter in library tab
  * Added File Browser. You can navigate throught your files and play them
    directly from guayadeque.
  * Now the lyrics can be saved to a directory you can configure from preferences -> lyrics
  * Changed the close buttons of the panes
  * Added search text for player playlist
  * Now allow to load from command line directories.
  * Now when loading the library if title is empty will be used the filename. 
    If album is empty will be used the dir name. 
    If Genre or Artist is empty 'Unknown' will be used.
  * Fixed Playlists. Now dynamic playlists are loaded more quickly.