@@ -1,4 +1,5 @@
 
+  * Added option in preferences library tab to add playlists when doing a library scanning
   * Added Thailand translation. Thanks to mr_hangman
   * Added Norwegian translation. Thanks to jente_14
   * Added icelandic translation. Thanks to Hreinsi
